@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN" "docbookx.dtd"> 
-<!-- the original of this documentation is in pbuilder source tar-ball -->
+<!-- the original of this documentation is in pbuilder source tar-ball,
+  and the latest version is found in CVS repository. -->
 <book>
   <bookinfo>
     <date>2003-03-01</date>
@@ -41,25 +42,26 @@
 	installed.
       </para>
       <para>
-	The aim of pbuilder is very different from other 
-	auto-building systems in that its aim is not in trying to build
-	as many packages. It does not try to guess
+	The primary aim of pbuilder is different from other 
+	auto-building systems in Debian by the fact that its aim is not in trying to build
+	as many packages. 
+        It does not try to guess
 	what a package needs, and in most cases it tries the
 	worst choice of all if there was a choice to be made.
       </para>
       <para>
 	In this way, <command>pbuilder</command> tries to ensure 
 	that packages 
-	tested against pbuilder will build in 
-	most Debian environments, hopefully resulting
+	tested against pbuilder will build properly in 
+	most Debian installations, hopefully resulting
 	in a good overall Debian source-buildability.
       </para>
       <para>
 	The goal of making Debian buildable from source is 
-	somewhat achieved, and has progressed well.
+	somewhat achieved, and has seen a good progress.
 	It is known that Debian 3.0 is not quite 
 	buildable from source, but the next version should 
-	be better.
+	be better, and the version after.
       </para>
     </sect1>
   </chapter>
@@ -73,7 +75,7 @@
 	Distribution code-name needs to be specified with 
 	<command><option>--distribution</option></command>
 	command-line option.
-	Usually, "sid" is the proper distribution.
+	Usually, "sid" is used.
       </para>
       <para>
 	<command>debootstrap</command> is used to create 
@@ -89,12 +91,12 @@
 	for the mirror site
 	<footnote>
 	  <para>
-	    The mirror site should preferably a local one,
+	    The mirror site should preferably a local mirror or a cache server,
 	    to not to overload the public mirrors with
 	    a lot of access.
 	  </para>
 	</footnote>
-	to use, and proxy configuration is probably required to allow access
+	to use, and proxy configuration may be required to allow access
 	through HTTP.
 	See pbuilderrc.5 manual page for details.
       </para>
@@ -113,7 +115,7 @@
 	Specify <command><option>--distribution <parameter>sid</parameter></option> <option>--override-config</option></command> to change the distribution
 	to sid.
 	<footnote>
-	  <para>However, only upgrading is really supported.</para>
+	  <para>Only upgrading is supported.</para>
 	</footnote>
       </para>
       <para>
@@ -152,7 +154,7 @@
       </para>
     </sect1>
     <sect1 id="pdebuild">
-      <title>Facilitating Debian Developers from typing, pdebuild</title>
+      <title>Facilitating Debian Developers' typing, pdebuild</title>
       <para>
 	<command>pdebuild</command> is a little wrapper 
 	script that does the most frequent of all tasks.
@@ -178,7 +180,7 @@
       <title>Configuration Files</title>
       <para>
 	It is possible to specify all settings by command-line
-	option. However, for convenience it is possible to 
+	option. However, for typing convenience it is possible to 
 	use a configuration file.
       </para>
       <para>
@@ -186,7 +188,7 @@
 	<filename>${HOME}/.pbuilderrc</filename>
 	are read in when pbuilder is invoked.
 	The possible options are documented in 
-	pbuilderrc.5 documentation.
+	pbuilderrc.5 manual page.
       </para>
       <para>
 	It is useful when switching between configuration files for 
@@ -198,19 +200,19 @@
       <para>
 	<command>pbuilder</command> requires full root privilege 
 	when it is satisfying the build-dependency but most packages do not 
-	need root privilege, or even do not build when they are root.
-	<command>pbuilder </command> can create a user only used 
+	need root privilege, or fail to build when they are root.
+	<command>pbuilder </command> can create a user which is only used 
 	inside <command>pbuilder </command> and use that user id when
 	building, and use <command>fakeroot</command> command
 	when root privilege is required.
       </para>
       <para>
-	BUILDUSERID needs should be set to a value for a user id that
-	does not exist on the system, so that it is harder for 
+	BUILDUSERID should be set to a value for a user id that
+	does not already exist on the system, so that it is more difficult for 
 	packages that are being built with 
-	<command>pbuilder</command> to do harm to the main system.
-	BUILDUSERNAME needs to be set to some value, and 
-	pbuilder will use that user id and use fakeroot for building.
+	<command>pbuilder</command> to affect the environment outside the chroot.
+	When BUILDUSERNAME is also set,  
+	pbuilder will use that user id and fakeroot for building packages.
       </para>
       <para>
 	Using the fakerooting method, pbuilder will run with 
@@ -312,7 +314,8 @@
 	<listitem>
 	  <para>
 	    Some packages require a lot of disk space, 
-	    around 2GB seems to be quite sufficient for the time being.
+	    around 2GB seems to be sufficient for the largest packages for the time being.
+            If you find it otherwise, please inform the maintainer of this documentation.
 	  </para>
 	</listitem>
       </itemizedlist>
@@ -347,9 +350,9 @@
 	    <filename>/usr/share/doc/pbuilder/examples/B90linda</filename>)</para>
 	</listitem>
 	<listitem>
-	  <para>Automatic debian-test of the package?</para>
+	  <para>Automatic debian-test of the package? debian-test package has been removed from Debian.</para>
 	</listitem>
-      </itemizedlist>
+     </itemizedlist>
     </sect1>
     <sect1 id="altcompiler">
       <title>Using pbuilder for testing build with alternate compilers</title>
@@ -357,8 +360,8 @@
 	Most packages are compiled with <command>gcc</command> 
 	or <command>g++</command>
 	and using the default compiler version, which was gcc 2.95 for Debian GNU/Linux 3.0 (i386).
-	However, Debian 3.0 was distributed with other compilers, and provided
-	binaries such as <command>gcc-3.2</command> for gcc compiler 
+	However, Debian 3.0 was distributed with other compilers, under package names
+        such as <command>gcc-3.2</command> for gcc compiler 
 	version 3.2.
 	It was therefore possible to try compiling packages against different
 	compiler versions.
@@ -394,8 +397,8 @@ export DEBIAN_BUILDGCCVER=3.2
 	It often happens that pbuilder cannot create latest chroot.
 	Try upgrading pbuilder and debootstrap.
 	It is currently only possible to create software that handles the 
-	past. Future prediction features may be added later when 
-	we can successfully handle the past.
+	past. Future prediction is a feature which may be added later after 
+	we have become comfortable with the past. 
       </para>
       <para>
 	There are people who occasionally backport debootstrap to stable
@@ -619,7 +622,7 @@ export DEBIAN_BUILDGCCVER=3.2
 	<para>
 	  <command>user-mode-linux</command> requires 
 	  the user to be in uml-net group in order to configure the network 
-	  (at the time of writing, 15 August 2003).
+	  unless you are using slirp.
 	  Read <filename>/usr/share/doc/uml-utilities/README.Debian</filename>
 	  for details.
 	</para>
@@ -637,13 +640,16 @@ export DEBIAN_BUILDGCCVER=3.2
 	    <para>install rootstrap package</para>
 	  </listitem>
 	  <listitem>
-	    <para>add the user to uml-net group to allow access to network
+	    <para>
+	      TUN/TAP only: 
+	      add the user to uml-net group to allow access to network
 	      <screen>
 adduser dancer uml-net
 	      </screen></para>
 	  </listitem>
 	  <listitem>
-	    <para>Check that compile supports tun/tap interface,
+	    <para>TUN/TAP only: 
+	      Check that compile supports tun/tap interface,
 	      and recompile the kernel if necessary
 	    </para>
 	  </listitem>
@@ -664,6 +670,10 @@ netmask=255.255.255.0
 	      <command>rootstrap ~/test.uml</command> to actually 
 	      test it would be handy.
 	    </para>
+	    <para>
+	      Using slirp requires less configuration. 
+	      The default configuration comes with a working example.
+	    </para>
 	  </listitem>
 	</itemizedlist>
       </sect2>
@@ -677,7 +687,7 @@ netmask=255.255.255.0
 	    </listitem>
 	    <listitem>
 	      <para>
-		Set configuration file <filename>/etc/pbuilder/pbuilder-uml.conf</filename> as follows
+		Set configuration file <filename>/etc/pbuilder/pbuilder-uml.conf</filename> in the following manner. It will be different for slirp.
 		<screen>
 MY_ETH0=tuntap,,,192.168.1.198
 UML_IP=192.168.1.199
@@ -744,13 +754,15 @@ PBUILDER_UML_IMAGE="/home/dancer/uml-image"
 	    <para>create and update methods must not be ran when build is in progress, or COW file will be invalid</para>
 	  </listitem>
 	  <listitem>
-	    <para>UML processes that are running in parallel needs to have 
+	    <para>
+              If you are not using slirp, UML processes that are running in parallel needs to have 
 	      different IP addresses.
 	      So, something like the following will work, 
 	      <command>for IP in 102 103 104 105; do xterm -e  pbuilder-user-mode-linux build --uml-ip 192.168.0.$IP 20030107/whizzytex_1.1.1-1.dsc&amp; done 
 	      </command>
 	      but just trying to run <command>pbuilder-uml</command> 
 	      several times will result in failure to access the network.
+              When using slirp, this problem does not exist.
 	    </para>
 	  </listitem>
 	</itemizedlist>
@@ -844,8 +856,7 @@ read
       </para>
       <para>
 	This documentation is available from pbuilder source tarball,
-	and from CVS repository of pbuilder (which might not be 
-	public yet now).
+	and from CVS repository of pbuilder (a web-based acces is possible).
 	A copy of this documentation can be found in
 	<ulink url="http://www.netfort.gr.jp/~dancer/software/pbuilder-doc/pbuilder-doc.html">Netfort page for pbuilder</ulink>.
 	The homepage for pbuilder is 
@@ -870,7 +881,7 @@ read
 	  Debian packages from source. Lars Wirzenius wrote that 
 	  script, and it was good, short, and simple (probably).
 	  There was nothing like build-depends then (I think), and it was simple.
-	  It could have been improved, I don't have the source off-hand.
+	  It could have been improved, I could only find references and no actual source.
 	</para>
 	<para>
 	  debbuild was probably written by James Troup. I don't know it 
@@ -925,6 +936,11 @@ read
 	  and bootstrapping user-mode-linux environment has been
 	  pretty hard.
 	</para>
+	<para>
+	  The third year is already there. pbuilder is widely adopted, and activity is focused on fixing minor problems.
+	  Some features are added, but most was filling the missing portions for user-mode-linux port.
+	</para>
+	
       </sect2>
     </sect1>
   </chapter>
