@@ -1,3 +1,7 @@
+2003-11-28    <dancer@zaurus>
+
+	* Documentation/pbuilder-doc.xml: update
+
 2003-11-27  Junichi Uekawa  <dancer@debian.org>
 
 	* debian/control (Conflicts): add conflicts against old bash.
